--- a/coding assignments/style.css
+++ b/coding assignments/style.css
@@ -1,82 +1,82 @@
 * {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+}
 
-  h1 {
-      font-size: 27px;
-      font-family: Georgia serif;
-      text-align: center;
-      color: rgb(0, 0, 0);
-      margin-bottom: 30px;
-  }
+h1 {
+    font-size: 27px;
+    font-family: Georgia serif;
+    text-align: center;
+    color: rgb(0, 0, 0);
+    margin-bottom: 30px;
+}
 
-  p {
-      padding: 15px 5px 0px 5px;
-      font-family: Georgia sans-serif;
-      font-size: 16px;
-      position: relative;
-  }
+p {
+    padding: 15px 5px 0px 5px;
+    font-family: Georgia sans-serif;
+    font-size: 16px;
+    position: relative;
+}
 
-  .section { 
-         background-color: rgb(150, 150, 150);
-         border: 2px solid black;
-         margin-top: 20px; 
-         margin-right: 20px; 
-         padding: 3px;
-         text-align: justify;
-         position: relative;
-   }
+.section { 
+       background-color: rgb(223, 215, 206);
+       border: 2px solid black;
+       margin-top: 20px; 
+       margin-right: 20px; 
+       padding: 20px;
+       text-align: justify;
+       position: relative;
+ }
 
-  span {
-      font-size: 20px;
-      width: 150px;
-      border: 1px solid black;
-      font-weight: bold;
-      text-align: center;
-      float: right; top :0; right: 0; margin: 0;
-      position: absolute;
-  }
-  #nr1 {
-      background-color: rgb(250, 150, 150);
-      color: rgb(0, 0, 0);
-  }
-  #nr2 {
-      background-color: rgb(250, 0, 0);
-      color: rgb(250, 250, 250);
-  }
-  #nr3 {
-      background-color: rgba(200, 192, 100, 0.938);
-      color: rgb(0, 0, 0);
-  }
+span {
+    font-size: 20px;
+    width: 150px;
+    border: 1px solid black;
+    font-weight: bold;
+    text-align: center;
+    float: right; top :0; right: 0; margin: 0;
+    position: absolute;
+}
+#chicken {
+    background-color: rgb(219, 163, 59);
+    color: rgb(0, 0, 0);
+}
+#beef {
+    background-color: rgb(175, 96, 60);
+    color: rgb(0, 0, 0);
+}
+#sushi {
+    background-color: rgba(100, 200, 170, 0.938);
+    color: rgb(0, 0, 0);
+}
 
 
-  .row {
-      width: 100%;
-  }
+.row {
+    width: 100%;
+}
 
-  @media (min-width: 992px) {
+@media (min-width: 992px) {
 
-    .col-lg-4 {
-      width: 33.33%;
-      float: left;
-      }
-  }
-
-  @media (min-width: 768px) and (max-width: 991px) {
-
-    .col-md-6 {
-      width: 50%;
-      float: left;
+  .col-lg-4 {
+    width: 33.33%;
+    float: left;
     }
-    .col-md-12 {
-      width: 100%;
-      float: left;
-    }
-  }
-  @media (max-width: 767px)  {
+}
 
-    .col-sx-12 {
-        float: left;
-      width: 100%;
-    }
+@media (min-width: 768px) and (max-width: 991px) {
+
+  .col-md-6 {
+    width: 50%;
+    float: left;
   }
+  .col-md-12 {
+    width: 100%;
+    float: left;
+  }
+}
+@media (max-width: 767px)  {
+
+  .col-sx-12 {
+      float: left;
+    width: 100%;
+  }
+}
